@@ -1,3 +1,4 @@
+Added a volume readout for the water
 Added +/- buttons to show/hide the concentration bar chart
 Made "show values" off by default and resets under "reset all"
 Moved "show values" checkbox to the concentration bar chart
